moved implementation detailfrom persistence to service layer